check point gemini with AST then claude finishing AST at 100%